<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_of_people_string"
            android:textSize="24sp"
            android:labelFor="@id/num_attend_edit_text" />

        <EditText
            android:id="@+id/num_attend_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="number"
            android:ems="5"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/how_hungry_string"
            android:textSize="24sp"
            android:labelFor="@id/hungry_radio_group" />

        <RadioGroup
            android:id="@+id/hungry_radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/light_radio_button"
                android:text="@string/light_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/medium_radio_button"
                android:text="@string/medium_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />
            <RadioButton
                android:id="@+id/ravenous_radio_button"
                android:text="@string/ravenous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:id="@+id/num_pizzas_text_view"
            android:text="@string/total_pizzas_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/calc_button"
            android:text="@string/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="calculateClick" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>